istio-resources/tracing/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: tracing-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - pipr-tracing.dol.go.th
    port:
      name: http
      number: 80
      protocol: HTTP
